# ACH

./: .gitignore  Cargo.toml  Draft.md  README.md  build.bat  build.sh  config.toml  config.yml  flake.nix  go.mod  go.sum  main.go
assets/: asset-manifest.json  index.html
bish-cli/: Cargo.toml
bish-cli/src/: main.rs
bish-core/: Cargo.toml  README.md  config.toml
bish-core/src/: config.rs  fabric.rs  main.rs  utils.rs
bish-core/src/core/: mod.rs
bish-core/src/core/server/: backup.rs  mod.rs
bish-core/src/server/services/: servers.rs
bootstrap/: config.go  static.go
config/: config.go
core/: ach.go  backup.go  bootstrap.go  command.go  config.go  db.go  regex.go  router.go  server.go  test_ach.go
core/middlewares/: jwt.go
core/models/: init.go  user.go
internal/bootstrap/: config.go  flag.go  static.go
internal/config/: config.go
internal/jwt/: jwt.go  jwt_test.go
internal/mc/: properties.go  server.go
internal/models/: init.go  server.go  user.go
internal/serializer/: response.go
internal/utils/: scrollBuffer.go  time.go  utils_test.go
lib/utils/: jwt.go  scrollBuffer.go  time.go  utils.go  ws.go
middlewares/: admin.go  frontend.go  jwt.go
models/: backup.go  init.go  server.go  user.go
pkg/config/: config.go
pkg/jwt/: jwt.go  jwt_test.go
pkg/utils/: mc.go  ws.go
routers/: router.go
routers/controllers/: admin.go  log.go  server.go  user.go
server/: bootstrap.go  router.go
src/: backup.rs  config.rs  fabric.rs  main.rs  server.rs  utils.rs
utils/: jwt.go  mc.go  microsoft.go  test_microsoft.go  utils.go  ws.go
(+20 files in other folders)
